# ramanujantools

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/scripts/: validate_tag.py
.github/workflows/: deploy.yml  python-package.yml
CMF/: cmf.py  cmf_test.py  ffbar.py  ffbar_test.py  known_cmfs.py  known_cmfs_test.py  matrix.py  matrix_test.py
cmf/: __init__.py  cmf.py  cmf_test.py  matrix.py  matrix_test.py  pcf.py  pcf_test.py
cmf/ffbar/: __init__.py  ffbar.py  ffbar_test.py
cmf/known_cmfs/: __init__.py  known_cmfs.py  known_cmfs_test.py
ramanujan/: __init__.py  cmf.py  cmf_test.py  delta.py  delta_test.py  generic_polynomial.py  generic_polynomial_test.py  limit.py  limit_test.py  matrix.py  matrix_test.py  pcf.py  pcf_test.py  precision.py  simplify.py  solvers_readme.md  square_matrix.py  square_matrix_test.py  vector.py  vector_test.py
ramanujan/cmf/: __init__.py  cmf.py  cmf_test.py  coboundary.py  coboundary_test.py
ramanujan/ffbar/: ffbar.py  ffbar_test.py
ramanujan/known_cmfs/: known_cmfs.py  known_cmfs_test.py
ramanujan/pcf/: __init__.py  delta_sequence_test.py  euler_family.py  pcf.py  (+6 more)
ramanujantools/: __init__.py  delta.py  delta_test.py  generic_polynomial.py  generic_polynomial_test.py  integer_relation.py  integer_relation_test.py  limit.py  limit_test.py  linear_recurrence.py  linear_recurrence_test.py  matrix.py  matrix_benchmark.py  matrix_test.py  poly_matrix.py  position.py  position_test.py  simplify_object.py  solvers_readme.md
(+81 files in other folders)
