[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramanujantools"
version = "0.0.2"
description = "Official symbolic and numeric research tools developed by the Ramanujan Machine team"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
  { name = "Ramanujan Machine Group", email = "ramanujan.machine@gmail.com" }
]

dependencies = [
    "tqdm>=4.65.0",
    "numpy>=2.0.0",
    "mpmath>=1.3.0",
    "sympy>=1.11.0",
    "gmpy2>=2.2.0",
    "python-flint>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["ramanujantools"]
[project.urls]

Homepage = "https://www.ramanujanmachine.com/"
Repository = "https://github.com/RamanujanMachine/ramanujantools"

